# market-data-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  out.json  pyproject.toml  requirements.txt
docs/batch/runs/: 2026-02-24_batch_backfill.md  2026-02-24_batch_incremental.md
infra/terraform/: athena.tf  batch_s3_prefixes.tf  cloudwatch.tf  dynamodb.tf  ecr.tf  eventbridge.tf  glue.tf  iam.tf  lambda.tf  out.json  outputs.tf  provider.tf  quality_metrics.tf  s3.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
pipelines/batch/ohlc_daily/: app.py  provider.py  quality.py  storage.py  transform.py
pipelines/streaming/ingest_lambda/: app.py  config.py  lambda_handler.py  provider.py  quality.py  storage.py  transform.py
schemas/: price_event.schema.json  sample_price_event.json
scripts/: smoke_config.py
